--- a/index.html
+++ b/index.html
@@ -465,6 +465,7 @@
                     // 使用以上方式判断前端返回,微信团队郑重提示：
                     //res.err_msg将在用户支付成功后返回ok，但并不保证它绝对可靠。
                     $.alert("支付成功");
+                    $("#formAdd").hide();
                     $("#leftButton").html(
                         '<a href="javascript:;"' +
                         'style="background:rgba(20, 180, 68, 0.877);width: 100%;height: 40px;line-height:40px;"' +
