--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
             <div class="weui-flex__item">
                 <div class="placeholder" style="text-align: center;">活动佣金排行榜
                     <div class="weui-panel weui-panel_access" style="height:200px">
-                        <!-- <div class="myscroll"> -->
                         <vue-seamless-scroll :data="activity.reward_list" :class-option="classOption">
                             <ul style="width:100%;min-width:100%;">
                                 <li v-for="reward in activity.reward_list" class="weui-flex">
@@ -127,8 +126,6 @@
                                 </li>
                             </ul>
                         </vue-seamless-scroll>
-
-                        <!-- </div> -->
                     </div>
                 </div>
             </div>
@@ -161,14 +158,14 @@
                         <div v-if="isOrder">
                             <a href="javascript:;"
                                 style="background:rgba(20, 180, 68, 0.877);width: 100%;height: 40px;line-height:40px;"
-                                class="weui-btn weui-btn_plain-default open-popup" data-target="#orderCode">兑换码</a>
+                                class="weui-btn weui-btn_plain-default open-popup" data-target="#myOrderCode">兑换码</a>
                         </div>
                     </div>
                 </div>
                 <div class="weui-flex__item">
                     <a href="javascript:;"
                         style="background:rgba(20, 180, 68, 0.877);width: 100%;height: 40px;line-height:40px;"
-                        class="weui-btn weui-btn_plain-default open-popup" data-target="#share">赚赏金</a>
+                        class="weui-btn weui-btn_plain-default open-popup" onclick="sharePic()">赚赏金</a>
                 </div>
             </div>
 
@@ -196,12 +193,12 @@
             </div>
         </div>
         <!-- 我的兑换码 -->
-        <div id="orderCode" class="weui-popup__container popup-bottom">
+        <div id="myOrderCode" class="weui-popup__container popup-bottom">
             <div class="weui-popup__overlay"></div>
             <div class="weui-popup__modal" style="padding: 20px">
-                <h3>兑换码:{{orderCode}}<h3>
-                        <div id="qrcode">
-                        </div>
+                <h3>兑换码:{{orderCode}}</h3>
+                <div id="qrCode">
+                </div>
             </div>
         </div>
         <!-- 音乐播放 -->
@@ -226,14 +223,14 @@
         </div>
     </div>
 </body>
-<script src="https://cdn.bootcss.com/jquery/1.11.0/jquery.min.js"></script>
-<!-- <script src="./js/jquery.vticker.min.js"></script> -->
+<!-- <script src="https://cdn.bootcss.com/jquery/1.11.0/jquery.min.js"></script> -->
+<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+<script src="./js/jquery.qrcode.min.js"></script>
 <script src="https://cdn.bootcss.com/vue/2.5.9/vue.js"></script>
 <script src="https://cdn.bootcss.com/axios/0.19.0-beta.1/axios.min.js"></script>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
 <script src="./js/vue-seamless-scroll.min.js"></script>
 <script src="./js/nav.js"></script>
-<script src="./js/jquery.qrcode.min.js"></script>
 <script src="https://cdn.bootcss.com/jquery-weui/1.2.1/js/jquery-weui.min.js"></script>
 <script>
     var remote_url = "http://www.hebiysg.cn/activity/";
@@ -252,7 +249,7 @@
             isOpen: false,
             userId: '',
             openid: '',
-            isOrder: false,
+            isOrder: true,
             isManager: false,
             goodsId: goodsId,
             orderCode: '',
@@ -276,7 +273,7 @@
         },
         created() {
             if (!isWeiXin()) {
-                $.alert("请在微信打开");
+                $.toast("请在微信打开", "forbidden");
             } else {
                 if (pid != null && pid != '') {
                     window.sessionStorage.setItem('pid', pid);
@@ -290,7 +287,7 @@
                         this.getActivityGoods(goodsId);
                     }
                 } else {
-                    $.alert("网址有误");
+                    $.toast("网址有误", "forbidden");
                 }
             }
         },
@@ -301,8 +298,7 @@
                     response) {
                     window.open(response.data.data);
                 }).catch(function (error) {
-                    console.log(error);
-                    $.alert("网络错误");
+                    $.toast("网络错误", "forbidden");
                 });
             },
             //获取活动数据
@@ -326,7 +322,7 @@
                     })
                     .catch(function (error) {
                         console.log(error);
-                        $.alert("网络错误");
+                        $.toast("网络错误", "forbidden");
                     });
             },
             createUser: function (code) {
@@ -335,25 +331,24 @@
                 axios.post(remote_url + '/h5/activity/user/add', userCode)
                     .then(function (response) {
                         temp.getActivityGoods(goodsId);
-                        window.sessionStorage.setItem('userId', response.data.data.userId);
                         temp.userId = response.data.data.userId;
                         temp.openid = response.data.data.openid;
                         temp.isOrder = response.data.data.order;
                         temp.isManager = response.data.data.manager;
                         if (response.data.data.order) {
                             temp.orderCode = response.data.data.orderCode;
-                            $('#qrcode').qrcode({
+                            $('#qrCode').qrcode({
                                 render: "table",
                                 height: 350,
                                 width: 350,
                                 correctLevel: 0,
-                                text: response.data.data.orderCode
+                                text: temp.orderCode
                             });
                         }
+                        window.sessionStorage.setItem('userId', response.data.data.userId);
                     })
                     .catch(function (error) {
-                        console.log(error);
-                        $.alert("网络错误");
+                        $.toast("网络错误", "forbidden");
                     });
             },
             //下单
@@ -361,17 +356,17 @@
                 var order = {
                     "goodsId": goodsId,
                     "phone": this.$refs.userPhone.value,
-                    "userId": this.userId,
+                    "userId": window.sessionStorage.getItem('userId'),
                     "userName": this.$refs.userName.value,
                     "openid": this.openid,
                     "parentId": window.sessionStorage.getItem('pid')
                 }
                 if (order.phone == '' || order.phone == null) {
-                    $.alert("请填写手机号");
+                    $.toast("请填写手机号", "text");
                     return;
                 }
                 if (order.userName == '' || order.userName == null) {
-                    $.alert("请填写姓名");
+                    $.toast("请填写姓名", "text");
                     return;
                 }
                 if (post_flag) return; //如果正在提交则直接返回，停止执行
@@ -386,9 +381,9 @@
                                 document.attachEvent('onWeixinJSBridgeReady', onBridgeReady);
                             }
                         } else {
-                            onBridgeReady(response.data.data);;
+                            onBridgeReady(response.data.data);
                         }
-                        $('#qrcode').qrcode({
+                        $('#qrCode').qrcode({
                             render: "table",
                             height: 350,
                             width: 350,
@@ -398,7 +393,7 @@
                     })
                     .catch(function (error) {
                         console.log(error);
-                        $.alert("网络错误");
+                        $.toast("网络错误", "forbidden");
                     });
                 post_flag = false; //如果正在提交则直接返回，停止执行
             },
@@ -447,7 +442,7 @@
                         }
                     })
                     .catch(function (error) {
-                        $.alert("网络错误" + error);
+                        $.toast("网络错误", "forbidden");
                     });
             }
         }
@@ -467,12 +462,12 @@
                 if (res.err_msg == "get_brand_wcpay_request:ok") {
                     // 使用以上方式判断前端返回,微信团队郑重提示：
                     //res.err_msg将在用户支付成功后返回ok，但并不保证它绝对可靠。
-                    $.alert("支付成功");
+                    $.toast("支付成功");
                     $("#formAdd").hide();
                     $("#leftButton").html(
                         '<a href="javascript:;"' +
                         'style="background:rgba(20, 180, 68, 0.877);width: 100%;height: 40px;line-height:40px;"' +
-                        'class="weui-btn weui-btn_plain-default open-popup" data-target="#orderCode">我的兑换码</a>'
+                        'class="weui-btn weui-btn_plain-default open-popup" data-target="#myOrderCode">我的兑换码</a>'
                     );
                 }
             });
@@ -553,6 +548,20 @@
         } else {
             return false;
         }
+    }
+
+    function sharePic() {
+        $.modal({
+            title: "长按图片保存到相册，分享朋友圈现金红包",
+            text: '<img src="http://qianniu.hebiysg.cn/FnQyPG4XduF9dJP57lqthLQgxvFO" style="width:100%;height:450px">',
+            buttons: [{
+                text: "取消",
+                className: "default",
+                onClick: function () {
+                    console.log(3)
+                }
+            }, ]
+        });
     }
 </script>
 
